# notorios-odoo-poller-orders-MS

./: .env  .env.example  .gitignore  CLAUDE.md  Comandos PROD.md  Como funciona internamente.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/context/: odoo-poller-context.md
config/: config.yaml
deploy/: deploy.sh
src/: __init__.py  cli.py  config.py  encryption.py  main.py
src/db/: database.py  models.py  repositories.py
src/odoo/: client.py  mapper.py  payload_hash.py
src/poller/: circuit_breaker.py  classifier.py  scheduler.py  sender.py  worker.py
tests/: test_circuit_breaker.py  test_classifier.py  test_database.py  test_e2e_updated_emission.py  test_encryption.py  test_mapper.py  test_odoo_client.py  test_payload_hash.py  test_refund_flow.py  test_sender.py  test_sent_order_repo.py  test_worker.py
